# apt-pkg-native-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  ci.Dockerfile  wrapper.hpp
.github/workflows/: rust.yml
apt-c/: Makefile  lib.cpp
apt-pkg-c/: Makefile  lib.cpp
examples/: epochs.rs  list.rs  policy.rs  sources.rs
examples/on-sid/: Dockerfile  Makefile  sources.list
examples/on-trusty/: Dockerfile  Makefile
src/: citer.rs  lib.rs  raw.rs  sane.rs  simple.rs
