[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "api-bindings",
    "os",
]
description = "Bindings for libapt-pkg"
license = "MIT"
name = "apt-pkg-native"
readme = "README.md"
repository = "https://github.com/FauxFaux/apt-pkg-native-rs"
version = "0.2.1"

[badges.travis-ci]
repository = "FauxFaux/apt-pkg-native-rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
lazy_static = "0.2"
libc = "0.2"

[dev-dependencies]
boolinator = "2"
itertools = "0.7"
